--- a/src/components/SimpleTodos/index.css
+++ b/src/components/SimpleTodos/index.css
@@ -1,43 +1,46 @@
 /* Write your CSS here */
-
-.background {
+/* Write your CSS here */
+.container {
   background-color: #ffc2a0;
-  height: 150vh;
-  padding: 40px;
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.inner-container {
+  background-color: white;
+  margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.card {
-  background-color: #ffffff;
+  width: 98%;
   border-radius: 20px;
-  padding: 40px;
-  width: 1000px;
 }
-
+@media screen and (min-width: 768px) {
+  .inner-container {
+    padding: 48px;
+    margin-top: 96px;
+    margin-bottom: 96px;
+  }
+}
 .heading {
+  font-size: 30px;
+  font-family: 'Roboto';
   color: #ff8542;
-  font-family: Roboto;
-  font-size: 45px;
   text-align: center;
+  font-weight: 700;
+  margin-top: 12px;
+  margin-bottom: 16px;
 }
-
-.ul {
-  padding: 20px;
-  list-style: none;
+@media screen and (min-width: 768px) {
+  .heading {
+    font-size: 48px;
+    margin-top: 32px;
+    margin-bottom: 48px;
+  }
 }
-
-.delete {
-  color: #ff0b37;
-  font-size: 18px;
-  padding: 10px;
-  font-family: Roboto;
-  background-color: white;
-  border-radius: 10px;
-  border-color: #ff0b37;
-  height: 60px;
-  padding-right: 10px;
-  padding-left: 10px;
+.todos-list {
+  padding-left: 0px;
 }
